End of Chapter 3

--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -126,20 +126,19 @@ For software developers outside of academia, militaries, governments, and large 
 
 One direct way is to add payment schemes directly to source code or to a website, asking for donations. Another would be to use a collective community to allocate donations and funds; Open Collective\footnote{\href{https://opencollective.com/}{https://opencollective.com/}} is an example of a company that helps do this for developers, some of whom are paid entirely through funds on the site.\footnote{\href{https://medium.com/open-collective/a-new-way-to-fund-open-source-projects-91a51b1b7aac}{https://medium.com/open-collective/a-new-way-to-fund-open-source-projects-91a51b1b7aac}} Crowdfunding sites can also be useful for some developers. Patreon is a good example where makers can earn money directly through fan donations, while Kickstarter has been used many times to fund projects. For example, Dave Gandy, the developer for Font Awesome, an open source font resource, raised over a million dollars in a month from 35,550 backers for the next version of his product.\footnote{\href{https://www.kickstarter.com/projects/232193852/font-awesome-5}{https://www.kickstarter.com/projects/232193852/font-awesome-5}} Code bounties, funds set by community members hoping to have other developers solve bugs, is another limited way of making money.\footnote{\href{https://www.bountysource.com/}{https://www.bountysource.com/}} Cryptocurrencies may eventually present other ways of funding open source, either directly\footnote{\href{https://utopian.io/}{https://utopian.io/}}\footnote{\href{https://oscoin.io/}{https://oscoin.io/}}\footnote{\href{https://gitcoin.co/}{https://gitcoin.co/}}, or through other avenues like initial coin offerings. Already, some companies are using initial coin offerings (similar to IPOs in the business world, but instead marking the launch of a new cryptocurrency) to fund development on open source, such as with Filecoin, which raised over 200 million for their coin development, of which many of the funds will go directly to open source projects run by the company Protocol Labs, such as IPFS \citep{benet2014ipfs} on GitHub.\footnote{\href{https://coinlist.co/filecoin}{https://coinlist.co/filecoin}}
 
-There are several guides online that outline other ways of funding open source.\footnote{\href{https://github.com/nayafia/lemonade-stand}{https://github.com/nayafia/lemonade-stand}}\footnote{\href{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}}\footnote{\href{https://opensource.guide/getting-paid/}{https://opensource.guide/getting-paid/}} In the end, the majority of open source developers are not remunerated for their work directly, and the problem of funds being directed to low resource languages is unlikely to be solved by any of the proposed solutions above. However, by banding together and sharing tools openly, computational linguists working on low resource languages can expedite their work. This methodology will be explored in the next section.
+There are several guides online that outline other ways of funding open source.\footnote{\href{https://github.com/nayafia/lemonade-stand}{https://github.com/nayafia/lemonade-stand}}\footnote{\href{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}}\footnote{\href{https://opensource.guide/getting-paid/}{https://opensource.guide/getting-paid/}} In the end, the majority of open source developers are not remunerated for their work directly. Most open source work is unpaid, and maintenance of open source software can be demanding and costly for developers who don't set expectations around levels of support for users. 
 
-\subsection{Ethical reasons for using open source}
+More specifically, the problem of funds being directed to low resource languages is unlikely to be solved by any of the proposed solutions above. However, by banding together and sharing tools openly, computational linguists working on low resource languages can expedite their work. This methodology will be explored in Chapter~\ref{sec:endlangcode}.
+
+\subsection{Ethics and open source}
 \label{subsec:oss-ethics}
 
+The quote from Richard Stallman in Section~\ref{subsec:defining-open-source} mentioned that "free software is an ethical imperative". This is, to put it mildly, a loaded statement, and comes from a philosophical viewpoint that not everyone agrees with. Open source, for all of its benefits, has serious drawbacks for developers involved in it.
 
-% IARPA and DARPA both are involved with low resource languages and both of them may have their own institutional values that are probably at ends with independent researchers, commercial consumers, and language communities. Does working on sparse data openly bring along with it ethical or moral concerns; if so, how can these be adequately explained, breached, and talked about? How can they be worked around or be part of the conversation? Note that DARPA and the like also use humanitarian reasons as their primary stated aim for work on sparse languages, which may be contrary to their military needs. There is already an extensive literature on moral uses of data -- I could summarize that, and apply it specifically to low resource languages, which is something I do not think has yet been published.
+For one, the overwhelming majority of open source coders on online communities are male, young, and white \citep{ghosh2002free}. A survey of 100k users from StackOverflow\footnote{\href{https://stackoverflow.com/}{https://stackoverflow.com/}}, a large language-agnostic forum for support and technical questions, found that this has changed little since in the past fifteen years, with 92.9\% of the users being male and 75\% of them white.\footnote{\href{https://insights.stackoverflow.com/survey/2018/}{https://insights.stackoverflow.com/survey/2018/}} Open source is disproportionally skewed towards already advantaged groups.
 
-% Darpa: http://www.darpa.mil/program/low-resource-languages-for-emergent-incidents
-% IARPA: http://www.iarpa.gov/index.php/research-programs/babel
+The incentives around open source contributions are also changeable, and while paid workers are more likely to contribute in the long run, users who contribute to code because of the value of the code to them are less likely to stay in the community for long periods of time \citep{roberts2006understanding, shah2006motivation}. Ultimately, it is hobbyists who end up working on code the longest, after the initial value to them has worn off \citep{shah2006motivation}. This has implications for low resource languages; is open source the best vehicle for developing language software, which may have long runways? On another note, is it ethical to implement a system where there is high burnout rate for developers who need it, when it may make more sense to find ways to fund direct work for a small core of dedicated developers? 
 
-% - Institutional bottleneck
-% - Linguistic colonialism
-% - Ethical and moral concerns for military usage
-% - Ethical and moral concerns for big business usage
+These are a couple of small examples of where advocating open source is not a clearcut issue. This paper is not meant to provide a solid overview of all ethical issues; however, at least some of them are worth noting here as caveats. For low resource languages, open source coding presents a clear opportunity for allowing communities to work together, cross-linguistically and between stakeholders, with a minimum of friction caused by proprietary licensing. It is my opinion that any work which can be expedited or made redundant may be useful in a field where languages are dying at exorbitant rates. 
 
-Finally, I want to close with a discussion of the moral and ethical reasons for using open source, and whether or not these concerns are relevant to computational linguists.
+% Finally, I want to close with a discussion of the moral and ethical reasons for using open source, and whether or not these concerns are relevant to computational linguists.
