--- a/references.bib
+++ b/references.bib
@@ -21,6 +21,38 @@
   year={2014}
 }
 
+@article{shah2006motivation,
+  title={Motivation, governance, and the viability of hybrid forms in open source software development},
+  author={Shah, Sonali K},
+  journal={Management science},
+  volume={52},
+  number={7},
+  pages={1000--1014},
+  year={2006},
+  publisher={INFORMS}
+}
+
+
+@article{roberts2006understanding,
+  title={Understanding the motivations, participation, and performance of open source software developers: A longitudinal study of the Apache projects},
+  author={Roberts, Jeffrey A and Hann, Il-Horn and Slaughter, Sandra A},
+  journal={Management science},
+  volume={52},
+  number={7},
+  pages={984--999},
+  year={2006},
+  publisher={INFORMS}
+}
+
+
+@misc{ghosh2002free,
+  title={Free/libre and open source software: Survey and study},
+  author={Ghosh, Rishab A and Glott, Ruediger and Krieger, Bernhard and Robles, Gregorio},
+  year={2002},
+  publisher={Part iv:" Survey of developers". http://www. infonomics. nl/FLOSS/report/FLOSS\_Final4. pdf}
+}
+
+
 @article{lowndes2017our,
   title={Our path to better science in less time using open data science tools},
   author={Lowndes, Julia S Stewart and Best, Benjamin D and Scarborough, Courtney and Afflerbach, Jamie C and Frazier, Melanie R and O’Hara, Casey C and Jiang, Ning and Halpern, Benjamin S},
