--- a/thesis.tex
+++ b/thesis.tex
@@ -22,7 +22,7 @@
 		\textsc{\LARGE Saarland  University}\\[0.4cm]
 		\textsc{\Large Department of Computational Linguistics}\\[1.5cm]
 
-		\textsc{\LARGE Master's thesis Proposal}\vspace{0.5cm}
+		\textsc{\LARGE Master's Thesis}\vspace{0.5cm}
 
 		% Title
 		\HRule \\[0.55cm]
