Add labels for Chapter 4

--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -1,10 +1,12 @@
 % !TEX root = thesis.tex
-\section{Open Source Code for Low Resource Languages}\label{sec:endlangcode}
-% Open Source code for endangered languages
+\section{Open Source Code for Low Resource Languages}
+\label{sec:endlangcode}
+
 
 In this section, I'll move on to the real meat of this thesis; how is open source code used for computational linguistics, and specifically for LRLs.
 
 \subsection{BLARK and beyond}
+\label{subsec:blark-and-beyond}
 
 First, I am going to talk about BLARK - the Basic LAnguage Resource Kit proposed by \citet{krauwer2003basic} - and what a language needs digitally as a base layer to digitally ascend. I haven't talked specifically about how computational linguistics addresses low resource languages yet - the preceding sections have largely been showing the state of the field and what open source is. We'll get to open source eventually, but here I want to cover the tools needed for a language.
 
@@ -19,6 +21,7 @@ I'll then mention tools here that can be used after a language has some digital 
 
 
 \subsection{NLTK and other open source libraries}
+\label{subsec:nltk}
 
 Here, I'll explain some open source resources that can be used to bootstrap development; for instance, \href{NLTK (Natural Language Toolkit)}{http://nltk.org/}, a free and open source library which uses the Python language by \citet{bird2006nltk}, and enables users to interface with over fifty different corpora and lexical resources.
 
@@ -44,6 +47,8 @@ Here, I'll explain some open source resources that can be used to bootstrap deve
 %% The tools used here are permissively licenses and publicly available.
 
 \subsection{Data permanence and interoperability}
+\label{subsec:data-permanence-and-interoperability}
+
 
 Here I'll talk about the inextricable nature of linguistics data and code, and how they are linked.
 
@@ -92,13 +97,15 @@ Here, I'll talk specifically about data rights and privacy, in regards to whethe
 
 
 
-\subsection{A database for open source code}\label{sec:solutions}
+\subsection{A database for open source code}
+\label{sec:solutions}
 
 Here, I'll talk about a database of open source code. Specifically, I'll mention my own work building \href{https://github.com/RichardLitt/endangered-languages}{https://github.com/RichardLitt/endangered-languages}, described first in \citet{CCURL}, and what it contains and who has worked on it with me. I'll cover the main tools, what kind of tools were included, and why I built the database on GitHub in this way.
 
 I'll also include diagnostics on how it has been used and how the tools it mentions have been used - what percentage have been downloaded, and so on.
 
-\subsection{Linked data}
+\subsection{Linked open data}
+\label{subsec:lod}
 
 Here, I'll briefly talk about related efforts with the Open Linguistics Working Group's \citep{chiarcos2012open} work on open source data reflected on the semantic web.\citep{chiarcos2013building}
 
