Add JOSS reference

--- a/references.bib
+++ b/references.bib
@@ -163,7 +163,15 @@
 @article{soria2017digital,
   title={A Digital Language Vitality Scale and Indicators},
   author={Soria, Claudia and Quochi, Valeria and Russo, Irene and Gurrutxaga, Antton and Ceberio, Klara},
-  year={2017}
+
+@article{smith2018journal,
+  title={Journal of Open Source Software (JOSS): design and first-year review},
+  author={Smith, Arfon M and Niemeyer, Kyle E and Katz, Daniel S and Barba, Lorena A and Githinji, George and Gymrek, Melissa and Huff, Kathryn D and Madan, Christopher R and Mayes, Abigail Cabunoc and Moerman, Kevin M and others},
+  journal={PeerJ Computer Science},
+  volume={4},
+  pages={e147},
+  year={2018},
+  publisher={PeerJ Inc.}
 }
 
 @article{rognvaldsson2009icelandic,
