Resolve bibtex issues

--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -2,8 +2,8 @@
 \section{Open Source Code for Low Resource Languages}
 \label{sec:endlangcode}
 
+Now that low resource languages have been described, and now that there has been a brief overview of open source as a software methodology, the reader will doubtless wonder two things: what resources are directly needed for low resource languages to become high resource languages, and what is the state of open source code that can be used today by language communities without needing large amounts of funding. Put another way: what does the field of computational linguistics and the current ecosystem of globally shared coded offer developing languages?
 
-In this section, I'll move on to the real meat of this thesis; how is open source code used for computational linguistics, and specifically for LRLs.
 
 \subsection{BLARK and beyond}
 \label{subsec:blark-and-beyond}
