--- a/references.bib
+++ b/references.bib
@@ -160,9 +160,12 @@
   publisher={Oxford University Press}
 }
 
-@article{soria2017digital,
+@unpublished{soria2017digital,
   title={A Digital Language Vitality Scale and Indicators},
   author={Soria, Claudia and Quochi, Valeria and Russo, Irene and Gurrutxaga, Antton and Ceberio, Klara},
+  year={2017},
+  note={Draft.}
+}
 
 @article{smith2018journal,
   title={Journal of Open Source Software (JOSS): design and first-year review},
@@ -174,10 +177,17 @@
   publisher={PeerJ Inc.}
 }
 
-@article{rognvaldsson2009icelandic,
+@incollection{rognvaldsson2009icelandic,
   title={Icelandic Language Resources and Technology: Status and Prospects},
   author={R{\"o}gnvaldsson, Eir{\'\i}kur and Loftsson, Hrafn and Bjarnad{\'o}ttir, Krist{\'\i}n and Helgad{\'o}ttir, Sigr{\'u}n and Whelpton, Matthew and Nikul{\'a}sd{\'o}ttir, Anna Bj{\"o}rk and Ingason, Anton Karl},
-  year={2009}
+  booktitle={Proceedings of the NODALIDA 2009 workshop Nordic Perspectives on the CLARIN Infrastructure of Language Resources},
+  editors={Rickard Domeij, Kimmo Koskenniemi, Steven Krauwer, Bente Maegaard, Eiríkur Rögnvaldsson and Koenraad de Smedt},
+  volume={5},
+  publisher={Northern European Association for Language Technology (NEALT)},
+  pages={27--32},
+  series={NEALT Proceedings Series},
+  year={2009},
+  doi={http://hdl.handle.net/10062/9670}
 }
 
 @article{streiter2006implementing,
@@ -977,15 +987,15 @@ note={[Online, accessed 27-August-2012]}
   publisher={Profile Books}
 }
 
-
-
 @article{paricio2010new,
   title={New ways to revitalise minority languages: the repercussions of the internet in the case of Aragonese},
   author={Paricio Mart{\'\i}n, Santiago and Mart{\'\i}nez Cort{\'e}s, Juan},
   year={2010},
+  journal={Digithum. The humanities in the digital age},
+  volume=0,
+  number=12,
   publisher={Universitat Oberta de Catalunya}
 }
-
 
 @article{del2015visualising,
   title={Visualising Italian Language Resources: a Snapshot},
@@ -994,7 +1004,6 @@ note={[Online, accessed 27-August-2012]}
   pages={100},
   year={2015}
 }
-
 
 @article{del2014lremap,
   title={The {LREMap} for under-resourced languages},
