--- a/thesis.tex
+++ b/thesis.tex
@@ -78,7 +78,9 @@
 
 \noindent\textbf{Acknowledgements}
 
-\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper.
+\noindent This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
+
+\noindent This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper[bot] (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
 
 \vspace{1cm}
 
